# NRD-Sample

./: .args  .clang-format  .gitignore  3-PrepareSDK.bat  3-PrepareSDK.sh  3-Run NRD sample.bat  3-Run.bat  4-Clean.bat  4-Clean.sh  CMakeLists.txt  README.md
.github/workflows/: build.yml
Shaders/: Composition.cs.hlsl  ConfidenceBlur.cs.hlsl  DlssAfter.cs.hlsl  DlssBefore.cs.hlsl  Final.cs.hlsl  MorphMeshUpdatePrimitives.cs.hlsl  MorphMeshUpdateVertices.cs.hlsl  RaytracingShared.hlsli  Shaders.cfg  SharcClear.cs.hlsl  SharcHashCopy.cs.hlsl  SharcResolve.cs.hlsl  SharcUpdate.cs.hlsl  Shared.hlsli  Taa.cs.hlsl  TraceOpaque.cs.hlsl  TraceTransparent.cs.hlsl
Shaders/Include/: RaytracingShared.hlsli  Shared.hlsli
Source/: NRDSample.cpp
